5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4081/executions/1643_869.log
== TEST (2019-04-08 15:30:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preço=float(input("sem desconto:"))
desc=5
if(desc%preço>200):
	
	
-- ERROR:
File "XXXX", line 9
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:41:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preço=float(input("sem desconto:"))
desc=5
if(desc%preço>=200):
	programa=(500-5%)
else:
	valor=0
print(round(valor, 2))	
-- ERROR:
File "XXXX", line 7
    programa=(500-5%)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:41:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preço=float(input("sem desconto:"))
desc=5
if(desc%preço>=200):
	programa=(500-5)
else:
	valor=0
print(round(valor, 2))	
-- ERROR:
File "XXXX", line 7
    programa=(500-5%)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:43:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preço=float(input("sem desconto:"))
desc=5%
if(desc%preço>=200):
	programa=(500-5)
else:
	valor=0
print(round(valor, 2))	
-- ERROR:
File "XXXX", line 5
    desc=5%
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:47:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preço=float(input("sem desconto:"))
desc=5%
if(desc%preço>=200):
	programa=(500-5%)
else:
	valor=0
print(round(valor, 2))	
-- ERROR:
File "XXXX", line 5
    desc=5%
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:47:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preço=float(input("sem desconto:"))
desc=5%
if(desc%preço>=200):
	programa=(500-desc%)
else:
	valor=0
print(round(valor, 2))	
-- ERROR:
File "XXXX", line 5
    desc=5%
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:48:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preço=float(input("sem desconto:"))
desc=5%
if(desc%preço>=200):
	programa=(500-desc)
else:
	valor=0
print(round(valor, 2))	
-- ERROR:
File "XXXX", line 5
    desc=5%
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:49:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preço=float(input("sem desconto:"))
desc=5
if(desc%preço>=200):
	programa=(500-desc)
else:
	valor=0
print(round(valor, 2))	
-- ERROR:
File "XXXX", line 5
    desc=5%
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:53:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preço=float(input("sem desconto:"))
desc=5
if(desc%preço>=200):
	programa=(500-desc)
else:
	valor=500
print(round(valor, 2))	
-- OUTPUT:
500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:53:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preço=float(input("sem desconto:"))
desc=5
if(desc%preço>=200):
	programa=(500-desc)
else:
	valor=475
print(round(valor, 2))	
-- OUTPUT:
475
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:53:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preço=float(input("sem desconto:"))
desc=5
if(desc%preço>=200):
	programa=(500-desc)
else:
	valor=475
print(round(valor, 2))	
-- EXECUTION TIME:
0.108133
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
475
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
475
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 16:06:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preço=float(input("sem desconto:"))
desc=5
if(desc%preço>=200):
	programa=(500-desc)
else:
	valor=475
print(round(valor, 2))	
-- OUTPUT:
475
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:15:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preço=float(input("sem desconto:"))
desc=5
if(desc%preço>=200):
	programa=(500-desc)
else:
	valor=475
print(round(valor, 2))	
-- OUTPUT:
475
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:16:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preço=float(input("sem desconto:"))
desc=5
if(desc%preço>=200):
	programa=(500-desc)
else:
	valor=475
print(round(valor, 2))	
-- EXECUTION TIME:
0.139777
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
475
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
475
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:23:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preço=float(input("sem desconto:"))
desc=5
if(desc%preço>=200):
	programa=(500-desc)
else:
	valor=475
print(round(valor, 2))	
-- OUTPUT:
475
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:01:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preço=float(input("sem desconto:"))
desc=5
if(descpreço>=200):
	programa=(500-desc)
else:
	valor=475
print(round(valor, 2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if(descpreço>=200):
NameError: name 'descpreço' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:06:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preço=float(input("sem desconto:"))
desc=(5/100)
if(desc==preço>=200):
	print(round(desc, 2)
else:
	
	print(round(valor, 2))	
-- ERROR:
File "XXXX", line 8
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:06:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preço=float(input("sem desconto:"))
desc=(5/100)
if(desc=preço>=200):
	print(round(desc, 2)
else:
	print(round(valor, 2))	
-- ERROR:
File "XXXX", line 6
    if(desc=preço>=200):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:06:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preço=float(input("sem desconto:"))
desc=(5/100)
if(desc%preço>=200):
	print(round(desc, 2)
else:
	print(round(valor, 2))	
-- ERROR:
File "XXXX", line 8
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:07:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preço=float(input("sem desconto:"))
desc=preço+(5/100)
if(preço>=200):
	print(round(desc, 2)
else:
	print(round(valor, 2))	
-- ERROR:
File "XXXX", line 8
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:07:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preço=float(input("sem desconto:"))
desc=preço+(5/100)
if(preço>=200):
	print(round(desc, 2)
else:
	print(round(preço, 2))	
-- ERROR:
File "XXXX", line 8
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:07:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preço=float(input("sem desconto:"))
desc=preço+(5/100)
if(preço>=200):
	print(round(desc, 2))
else:
	print(round(preço, 2))	
-- OUTPUT:
200.14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 19:07:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preço=float(input("sem desconto:"))
desc=preço+(5/100)
if(preço>=200):
	print(round(desc, 2))
else:
	print(round(preço, 2))	
-- EXECUTION TIME:
0.200596
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
200.14
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
200.58
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:07:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preço=float(input("sem desconto:"))
desc=preço+(5/100)
if(preço>=200):
	print(round(desc, 2))
else:
	print(round(preço, 2))	
-- OUTPUT:
200.14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:08:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preço=float(input("sem desconto:"))
desc=preço-(5/100)
if(preço>=200):
	print(round(desc, 2))
else:
	print(round(preço, 2))	
-- OUTPUT:
200.04
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:08:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preço=float(input("sem desconto:"))
desc=preço-(0.5/100)
if(preço>=200):
	print(round(desc, 2))
else:
	print(round(preço, 2))	
-- OUTPUT:
200.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:09:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preço=float(input("sem desconto:"))
desc=preço*(5/100)
if(preço>=200):
	print(round(desc, 2))
else:
	print(round(preço, 2))	
-- OUTPUT:
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 19:09:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preço=float(input("sem desconto:"))
desc=preço*(5/100)
if(preço>=200):
	print(round(desc, 2))
else:
	print(round(preço, 2))	
-- EXECUTION TIME:
0.20437
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
10.0
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
10.03
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:09:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preço=float(input("sem desconto:"))
desc=(preço*5/100)
if(preço>=200):
	print(round(desc, 2))
else:
	print(round(preço, 2))	
-- OUTPUT:
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:11:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preço=float(input("sem desconto:"))
desc=(preço*5/100)
sub=(500-25)
if(preço>=200):
	print(round(desc, 2))
else:
	print(round(preço, 2))	
-- OUTPUT:
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:11:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preço=float(input("sem desconto:"))
desc=(preço*5/100)
sub=(500-25)
if(preço>=200):
	print(round(desc, 2))
else:
	print(round(preço, 2))	
-- OUTPUT:
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 19:11:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preço=float(input("sem desconto:"))
desc=(preço*5/100)
sub=(500-25)
if(preço>=200):
	print(round(desc, 2))
else:
	print(round(preço, 2))	
-- EXECUTION TIME:
0.120459
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
10.0
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
10.03
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 19:11:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preço=float(input("sem desconto:"))
desc=(preço*5/100)
sub=(500-25)
if(preço>=200):
	print(round(desc, 2))
else:
	print(round(preço, 2))	
-- EXECUTION TIME:
0.200412
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
10.0
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
10.03
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:12:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preço=float(input("sem desconto:"))
desc=(preço*5/100)
sub=(preço- desc)
if(preço>=200):
	print(round(desc, 2))
else:
	print(round(preço, 2))	
-- OUTPUT:
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 19:12:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preço=float(input("sem desconto:"))
desc=(preço*5/100)
sub=(preço- desc)
if(preço>=200):
	print(round(sub, 2))
else:
	print(round(preço, 2))	
-- EXECUTION TIME:
0.149482
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 19:13:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preço=float(input("sem desconto:"))
desc=(preço*5/100)
sub=(preço- desc)
if(preço>=200):
	print(round(sub, 2))
else:
	print(round(preço, 2))	
-- EXECUTION TIME:
0.215272
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 19:14:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preço=float(input("sem desconto:"))
desc=(preço*5/100)
sub=(preço- desc)
if(preço>=200):
	print(round(sub, 2))
else:
	print(round(preço, 2))	
-- EXECUTION TIME:
0.246343
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:41:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preço=float(input("sem desconto:"))
desc=(preço*5/100)
sub=(preço- desc)
if(preço>=200):
	print(round(sub, 2))
else:
	print(round(preço, 2))	
-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 18:41:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preço=float(input("sem desconto:"))
desc=(preço*5/100)
sub=(preço- desc)
if(preço>=200):
	print(round(sub, 2))
else:
	print(round(preço, 2))	
-- EXECUTION TIME:
0.150048
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
